--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "teemojs": "^1.8.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
