--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "faker": "^4.1.0",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "socket.io": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
