--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.25.2",
+    "axios": "^0.21.1",
     "bcrypt": "^4.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -20,7 +21,8 @@
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
-    "socket.io": "^4.1.3"
+    "socket.io": "^4.1.3",
+    "teemojs": "^1.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
