--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "framer": "^1.3.6",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
@@ -18,6 +19,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "socket.io-client": "^4.1.3",
+    "styled-components": "^5.3.0",
+    "styled-icons": "^10.37.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
