--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@apollo/client": "^3.4.5",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/styles": "^4.11.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -19,10 +20,10 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "teemojs": "^1.8.0",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.37.0",
+    "teemojs": "^1.8.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
