--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "socket.io": "^4.1.3",
+    "socketio-jwt": "^4.6.2",
     "teemojs": "^1.8.0"
   },
   "devDependencies": {
