--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tinder-card": "^1.4.0",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.37.0",
