removed chat feature from server side and moved to seperate repo

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
+    "chatWatch": "nodemon socketIo.js",
     "seed": "node seeders/seeds.js"
   },
   "keywords": [],
