--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,9 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
     "react-tinder-card": "^1.4.0",
+    "react-use-gesture": "^9.1.3",
     "socket.io-client": "^4.1.3",
     "styled-components": "^5.3.0",
     "styled-icons": "^10.37.0",
